add new APIs and fix issues